# llspy-slm

./: .appveyor.yml  .gitignore  .travis.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  environment.yml  setup.cfg  setup.py
.github/workflows/: ci.yml
build_mac/: build.sh  slmgui.spec
build_win/: build.bat  slmgui.spec
conda.recipe/: meta.yaml  run_test.py
docs/: Makefile  api.rst  conf.py  gui.rst  index.rst  make.bat  slm.rst
img/: slmgen_logo.icns
slmgen/: __init__.py  __main__.py  makepsf.py  slm.py  slm_pattern_dialog.py  slm_pattern_dialog.ui  slmwindow.py  version.py
tests/: test_functions.py  test_gui.py
