[metadata]
name = llspy-slm
version = attr: slmgen.__version__
description = Lattice Light Sheet SLM Pattern Generator
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
author = Talley Lambert
author_email = talley.lambert@gmail.com
url = https://github.com/tlambert03/llspy-slm
license = BSD 3-clause
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy
    scipy
    numba ; python_version < "3.10"
    pillow
    qtpy

[options.packages.find]
exclude =
    tests
    docs
    pyinstaller

[options.entry_points]
console_scripts =
    slmgen = slmgen.slmwindow:main

[options.package_data]
llspy-slm = img/slmgen_logo.png, slmgen/slm_pattern_dialog.ui

[options.extras_require]
tests =
    pytest
    pytest-qt
    pyqt5
    pytest-cov
